# FAIR-Maturity-Matrix

./: .gitignore  README.md  docs-metadata.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: FAIRMM_business_value.md  FAIRMM_personas.md  FAIRMM_roles.md  FAIRMaturityMatrix.md  FAIR_data_principles.md  FAIR_training.md  FMMdimensions.md  FMMlevels.md  Maths.md  README.md  contributors.md  data-governance.md  fmm-d1.md  fmm-d2.md  fmm-d3.md  fmm-d4.md  fmm-d5.md  fmm-d6.md  fmm-d7.md  index.md  introduction.md  level0.md  level1.md  level2.md  level3.md  level4.md  level5.md  migration.md  resources_lexicon.md  summary.md  termsofuse.md  test.md  video.json
docs/Data-Viz/: FAIR-principles-FAIRMM-6.html  FAIR-principles-FAIRMM-7.html  readme-viz.md  readme.md
docs/FAIR_personas/: 2025-05 _FAIR_roles_personas.xlsx  Autonomous_AI_Agent.md  Business_Analyst.md  Business_Leader.md  Business_Owner.md  Citizen_Data_Scientist.md  Clinical_Data_Manager.md  Curator.md  Data_Analyst.md  Data_Engineer.md  Data_Integration_Specialist.md  Data_Owner.md  Data_Protection_Officer.md  Data_Quality_Manager.md  Data_Scientist.md  Data_Standards_and_Governance_Expert.md  Data_Steward.md  Data_Strategy_Owner.md  FAIR_Community_Manager.md  FAIR_Data_Architect.md  FAIR_Trainer.md  Knowledge-Enabled_Citizen.md  Lab_Manager.md  Legal_Data_Expert.md  Master_Data_Manager.md  Ontologist.md  Project_Manager.md  Reference_Data_Manager.md  Researcher.md  Subject_Matter_Expert.md  Technology_Leader.md  X-template-FAIR_persona.md  file_list.md
(+28 files in other folders)
